<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calendarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/calendar_test_activity" />

    <Button
        android:id="@+id/contactsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_test_activity"
        android:layout_below="@id/calendarBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/smsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_test_activity"
        android:layout_below="@id/contactsBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/callLogsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calllogs_test_activity"
        android:layout_below="@id/smsBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/microphoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microphone_test_activity"
        android:layout_below="@id/callLogsBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_2_test_activity"
        android:layout_below="@id/microphoneBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/cameraByIntentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_by_intent_test_activity"
        android:layout_below="@id/cameraBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/recordVideoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_video"
        android:layout_below="@id/cameraByIntentBtn"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/sensorsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initialize_sensors"
        android:layout_below="@id/recordVideoBtn"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>